# vigir_scenarios_gazebo

./: README.md
vigir_test_worlds_gazebo/: CMakeLists.txt  package.xml
vigir_test_worlds_gazebo/include/vigir_test_worlds_gazebo/: HectorVehiclePlugin.hh  HectorVehicleROSPlugin.h
vigir_test_worlds_gazebo/launch/: coke_can_on_table.launch  start.launch
vigir_test_worlds_gazebo/models/dewalt_DCD980M2/: model.config  model.sdf
vigir_test_worlds_gazebo/models/dewalt_DCD980M2/meshes/: dewalt_dcd980m2.dae  dewalt_dcd980m2.stl  dewalt_dcd980m2_collision.stl  dewalt_dcd980m2_color.dae
vigir_test_worlds_gazebo/models/hector_vehicle_xp900/: model.config  model.config~  model.sdf  model.sdf~
vigir_test_worlds_gazebo/src/: HectorVehiclePlugin.cc  HectorVehicleROSPlugin.cpp
vigir_test_worlds_gazebo/worlds/: coke_can_on_table.world  driving_demo.world
